# maya-implicit-skinning

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.TXT  cmake_generate_gcc_makefiles_debug.sh  cmake_generate_gcc_makefiles_release.sh  cmake_jom_debug.bat  cmake_jom_release.bat  cmake_run.bat  cmake_vcproj_debug.bat  qtcreator_project_file.pro
doc/: fbx_some_notes.txt  mdd file spec.txt  pc2 spec.txt
doc/doxygen/: build_doc.sh  doxygen_config
implicit/: __init__.py
include/animation/: .animesh.hpp.swp  .animesh_enum.hpp.swp  animesh.hpp  animesh_enum.hpp  animesh_kers.hpp  animesh_kers_colors.hpp  animesh_kers_colors.inl  animesh_potential.hpp  bone.hpp  bone_type.hpp  gl_skeleton.hpp  graph.hpp  kinematic.hpp  skeleton.hpp
include/blending_lib/: controller_tools.hpp  funcs.hpp  generator.hpp  opening.hpp  opening.inl  operators.hpp  structs.hpp
include/containers/: grid3_cu.hpp  idx3_cu.hpp  material_cu.hpp
include/control/: animated_mesh_ctrl.hpp  color_ctrl.hpp  cuda_ctrl.hpp  debug_ctrl.hpp  display_ctrl.hpp  graph_ctrl.hpp  path_ctrl.hpp  potential_plane_ctrl.hpp  skeleton_ctrl.hpp
include/global_datas/: .globals.hpp.swp  cuda_globals.hpp  globals.hpp  operator_use_macros.hpp
include/maths/: bbox.hpp  bbox2i_cu.hpp  color.hpp  cpu_transfo.hpp  dual_quat_cu.hpp  mat3_cu.hpp  math_cu.hpp  quat_cu.hpp  ray_cu.hpp  selection_heuristic.hpp  trackball.hpp  transfo.hpp  trs.hpp  vec2_cu.hpp  vec2i_cu.hpp  vec3_cu.hpp
include/meshes/: gen_mesh.hpp  gl_mesh.hpp  mesh.hpp
include/parsers/: fbx_loader.hpp  fbx_utils.hpp  generic_loader.hpp  graph_loader.hpp  loader.hpp  loader_anims.hpp  loader_enum.hpp  loader_mesh.hpp  loader_skel.hpp  obj_loader.hpp  off_loader.hpp  point_cache_export.hpp  ppm_loader.hpp  tex_loader.hpp  weights_loader.hpp
include/primitives/: .implicitprimitive.hpp.swp  blob.hpp  cube.hpp  cube.inl  cylinder.hpp  cylinder.inl  distance_field.inl  hermiteRBF.hpp  implicitprimitive.hpp  metaball.hpp  metaball.inl  plane.hpp  plane.inl  precomputed_prim.hpp  precomputed_prim.inl
include/qt_gui/: gui.dox
include/rendering/: camera.hpp  cuda_main_kernels.hpp  cuda_rendering.hpp  cuda_stuff.hpp  depth_peeling.hpp  filters.hpp  opengl_stuff.hpp  packed_data_struct.hpp  raytracing.hpp  raytracing_context.hpp  render_context.hpp  scene.hpp  scene_enum.hpp
include/utils/: assert_utils.hpp  chrono.hpp  class_saver.hpp  conversions.hpp  std_utils.hpp
libs/: README.TXT
msvc/: implicit_framework.sln  implicit_framework.vcxproj  implicit_framework.vcxproj.filters
resource/textures/: controller_frame.ppm  operator_frame _old.ppm  operator_frame.ppm  tex.ppm  vortex_text.ppm
src/: Interface.cpp  Interface.h  main_skinning.cpp  plugin.cpp  testing_area.cu
src/animation/: .animesh.cu.swp  .kinematic.cpp.swp  animesh.cu  animesh.hpp  animesh_base.hpp  animesh_enum.hpp  animesh_hrbf_heuristic.cu  animesh_hrbf_heuristic.hpp  animesh_kers.cu  animesh_kers.hpp  animesh_kers_colors.cu  animesh_potential.hpp  animesh_projection.cu  bone.cu  bone.hpp  bone_type.hpp  gl_skeleton.cpp  graph.cpp  joint_type.hpp  kinematic.cpp  loader_skel.cpp  loader_skel.hpp  skeleton.cu  skeleton.hpp  vert_to_bone_info.cu  vert_to_bone_info.hpp
src/blending_lib/: .generator.cpp.swp  controller.cpp  controller.hpp  controller_tools.cpp  controller_tools.hpp  funcs.hpp  generator.cpp  generator.hpp  opening.cpp  opening.hpp  opening.inl  operators.cpp  splines.hpp  splines.inl  structs.cpp  structs.hpp  tools.cpp  tools.hpp
src/containers/: grid3_cu.hpp  grid3_cu.inl  identifier.hpp  idx3_cu.hpp
src/control/: animated_mesh_ctrl.cu  animated_mesh_ctrl.hpp  color_ctrl.cu  cuda_ctrl.cu  cuda_ctrl.hpp  debug_ctrl.cpp  debug_ctrl.hpp  graph_ctrl.cpp  operators_ctrl.cu  operators_ctrl.hpp  sample_set.cpp  sample_set.hpp  skeleton_ctrl.cu  skeleton_ctrl.hpp
src/global_datas/: ad_hoc_hand.hpp  cuda_globals.cu  globals.cpp  macros.hpp
src/implicit_graphs/: bone_tex.hpp  grid.cpp  grid.hpp  skeleton_env.cu  skeleton_env.hpp  skeleton_env.inl  skeleton_env_evaluator.cu  skeleton_env_evaluator.hpp  skeleton_env_tex.hpp  skeleton_env_type.hpp  tree.cpp  tree.hpp  tree_cu.cpp  tree_cu.hpp  tree_cu_type.hpp  tree_type.hpp
src/maths/: bbox.hpp  mat3_cu.hpp  math_cu.hpp  point_cu.hpp  ray_cu.hpp  trackball.cpp  transfo.hpp  vec2_cu.hpp  vec2i_cu.hpp  vec3_cu.hpp  vec3i_cu.hpp
src/maya/: Interface.cpp  Interface.hpp  bone_set.cpp  bone_set.hpp  implicit_blend.cpp  implicit_blend.hpp  implicit_deformer.cpp  implicit_deformer.hpp  implicit_surface.cpp  implicit_surface.hpp  implicit_surface_data.cpp  implicit_surface_data.hpp  implicit_surface_geometry_override.cpp  implicit_surface_geometry_override.hpp  marching_cubes.cu  maya_data.cpp  maya_data.hpp  maya_helpers.cpp  maya_helpers.hpp  plugin.cpp  plugin.hpp
src/meshes/: gen_mesh.cpp  gl_mesh.cpp  loader_mesh.hpp  mesh.cpp  mesh.hpp
src/parsers/: endianess.cpp  endianess.hpp  fbx_loader.cpp  fbx_utils.cpp  loader.cpp  loader_mesh.cpp  loader_skel.cpp  loader_skel.hpp  obj_loader.cpp  off_loader.cpp  point_cache_export.cpp  ppm_loader.cpp  tex_loader.cpp  weights_loader.cpp
src/primitives/: distance_field.cu  distance_field.hpp  distance_field.inl  hermiteRBF.cu  hermiteRBF.hpp  hermiteRBF.inl  plane.hpp  plane.inl  precomputed_prim.cu  precomputed_prim.hpp  precomputed_prim_constants.hpp
src/rendering/: .opengl_stuff.cpp.swp  camera.cpp  cuda_main_kernels.cu  cuda_main_kernels.hpp  cuda_rendering.cu  cuda_stuff.cu  depth_peeling.cpp  filters.cu  opengl_stuff.cpp  render_context.cu  scene.cpp
src/shaders/: arrows.frag  arrows.vert  bvh_shader.frag  bvh_shader.vert  dummy_quad.frag  dummy_quad.vert  front_peeling_final_fragment.glsl  front_peeling_init_fragment.glsl  front_peeling_init_vertex.glsl  front_peeling_peel_fragment.glsl  front_peeling_peel_vertex.glsl  lavalamp.frag  lavalampbody.frag  lavalampbody.vert  normal_map.frag  normal_map.vert  phong.frag  phong.geom  phong.vert  picking.frag  picking.vert  points.geom  points.vert  ssao.frag  ssao.vert
src/utils/: class_saver.hpp  misc_utils.cpp  (+5 more)
(+269 files in other folders)
